--- a/styles/styles.css
+++ b/styles/styles.css
@@ -574,31 +574,51 @@ footer a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: start;
-    grid-template-rows: auto auto;
-    gap: 20px;
+    margin: 0 auto;
+    width: 85%;
+    gap: 40px;
 }
 
 .img-container{
-    grid-column: 1;
-    grid-row: 1/span 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .img-container img{
-    width: 500px;
-    height: 500px;
+    width: 450px;
+    height: 450px;
     border-radius: 5px;
-    margin-top: 15px;
     margin-bottom: 15px;
-    margin-left: 200px;
+    object-fit: cover;
+}
+
+.product-description{
+    font-size: 20px;
+    color: var(--color-strong-green);
+    max-width: 450px;
+    margin-top: 10px;
+    font-weight: 600;
 }
 
 .price-container{
-    grid-column: 2;
-    grid-row: 1;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    row-gap:5px;
+}
+
+.price-container h2{
+    color: var(--color-primario);
+    font-size: 28px;
+    margin-bottom: 50px;
+}
+
+.box-payment{
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 15px;
 }
 
 .add-to-cart-btn{
@@ -618,24 +638,6 @@ footer a {
     background-color: var(--color-secundario);
 }
 
-.details{
-    grid-column: 2;
-    grid-row: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    margin-bottom: 0;
-}
-
-.details p{
-    margin-top: 0;
-    margin-right: 30px;
-}
-
-.details h2{
-    margin-top: 0;
-}
-
 .quantity-label{
     display: block;
     margin-bottom: 5px;
@@ -646,6 +648,18 @@ footer a {
     width: 70px;
     border: 1px solid;
     height: 25px;
+}
+
+.details-list{
+    margin: 20px 0 50px 0;
+    list-style: none;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.details-list li{
+    margin-bottom: 10px;
 }
 
 /*----------------------------LANDING NOSOTROS--------------------------------*/
