--- a/styles/breadcrum-style.css
+++ b/styles/breadcrum-style.css
@@ -12,6 +12,7 @@
     --menu-mobile-background: #FFE2E2;
 }
 
+/*
 .breadcrumb {
     display: flex;
     justify-content: flex-start;
@@ -35,4 +36,32 @@
 
 .breadcrumb .divider{
     margin: 0 5px;
+}
+
+*/
+
+.breadcrumb{
+    margin: 20px 100px;
+    font-size: 18px;
+}
+
+.inicio-breadcrum{
+    text-decoration: none;
+    color: var(--color-strong-green);
+    font-weight: 500;
+}
+
+.productos-breadcrum{
+    text-decoration: none;
+    color: var(--color-strong-green);
+    font-weight: 500;
+}
+
+.active-breadcrum{
+    color: var(--color-primario);
+    font-weight: 400;
+}
+
+.divider{
+    padding: 5px;
 }
