feat: implement product filtering and detail display

--- a/styles/breadcrum-style.css
+++ b/styles/breadcrum-style.css
@@ -1,23 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "DM Sans", sans-serif;
-    font-size: 18px;
-    --color-primario: #FAE2D4;
-    --color-secundario: #fff7ee;
-    --text-color: #000000;
-    --menu-mobile-background: #FFE2E2;
+    font-family: "Montserrat";
+    --color-primario: #7FAD78;
+    --color-secundario: #AF2F4E;
+    --color-strong-green: #304B2C;
+    --color-pastel-red: #DE909D;
+    --color-grey: #F7F8FA;
+    overflow-x: hidden;
 }
 
-/*
 .breadcrumb {
-    display: flex;
+    display: inline-block;
     justify-content: flex-start;
     padding: 20px;
-    margin-left: 20px;
+    margin: 20px 100px;
+    font-size: 18px;
 }
 
 .breadcrumb a {
@@ -38,13 +39,6 @@
     margin: 0 5px;
 }
 
-*/
-
-.breadcrumb{
-    margin: 20px 100px;
-    font-size: 18px;
-}
-
 .inicio-breadcrum{
     text-decoration: none;
     color: var(--color-strong-green);
@@ -63,5 +57,11 @@
 }
 
 .divider{
-    padding: 5px;
+    padding: 2px;
+}
+@media (max-width: 768px){
+    .breadcrumb{
+        margin: 20px 20px;
+        font-size: 16px;
+    }
 }
