--- a/styles/styles.css
+++ b/styles/styles.css
@@ -526,12 +526,11 @@ footer a {
     font-weight: 600;
 }
 
-/*------------------------ GRILLA PRODUCTOS --------------------------*/
+/*------------------------ GRILLA PRODUCTOS HOME --------------------------*/
 
 .products-section{
     text-align: center;
     padding: 40px 20px;
-    display: block;
 }
 
 .products-section h3{
@@ -745,6 +744,7 @@ footer a {
     display:flex;
     align-items: flex-start;
     gap: 20px;
+
 }
 
 .products-page aside{
@@ -764,6 +764,10 @@ footer a {
     padding: 10px;
     width: 100%;
     box-sizing: border-box;
+}
+
+.product-item {
+    text-align: center;
 }
 
 @media (max-width: 768px) {
