--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,9 +35,10 @@ body{
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    max-width: 980px;
+    max-width: 1200px;
     margin: 0 auto;
     position: relative;
+    /*padding: 10px, 20px;*/
 }
 
 .logo{
@@ -71,7 +72,7 @@ body{
 .nav-links{
     display: flex;
     list-style: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     gap: 15px;
 }
@@ -149,6 +150,7 @@ body{
 
 .user-icon{
     transform: scale(1.1);
+    cursor: pointer;
 }
 
 .icons{
@@ -159,6 +161,7 @@ body{
 
 .menu-toggle:checked ~ .right-section .nav-links {
     display: flex;
+    flex-direction: column;
 }
 
 .menu-toggle:checked + .menu-btn .open-menu {
@@ -179,9 +182,12 @@ body{
         align-items: center; 
         max-width: 100%; 
         padding: 5px 20px;
+        position: relative;
+        z-index: 100;
     }
     
     .logo {
+        position: static;
         grid-column: 2;
         justify-self: center;
         align-self: center;
@@ -190,12 +196,14 @@ body{
         display: flex;
         grid-column: 1; 
         align-items: center;
+        justify-self: start;
     }
     .icons {
+        position: static;
         grid-column: 3;
         display: flex;
         align-items: center;
-        justify-content: flex-end;
+        justify-self: end;
         gap: 10px;
     }
 
@@ -213,8 +221,9 @@ body{
         height: 22px;
     }
     .user-icon {
-        width: 32px;
+        width: 40px;
         padding: 0; 
+        cursor: pointer;
     }
     .cart-btn, .profile-btn {
         height: auto; 
@@ -222,13 +231,15 @@ body{
     .nav-links {
         display: none; 
         position: absolute;
-        top: 100%; 
+        top: 53px; 
         left: 0;
-        width: 60%; 
+        width: 100%; 
         background-color: var(--color-grey, white);
         padding: 20px 0;
         z-index: 99;
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        flex-direction: column;
+        text-align: center;
     }
 }
 
